# Library-System

./: .gitignore  CMakeLists.txt  README.md
app/: main.cpp
app/database/: books.json  users.json
app/header/: book.h  generalFunctions.h  user.h
app/src/: book.cpp  generalFunctions.cpp  user.cpp
main/: main.cpp
src/: book.cpp
